app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: app-ingress
spec:
  rules:
  - host: blue-green.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blue-app
            port: 
              number: 8080
      # - pathType: Prefix
      #   path: "/"
      #   backend:
      #     service:
      #       name: green-app
      #       port: 
      #         number: 8081
